fix: prevent figcaption to cause overflow

--- a/src/scss/elements/_media.scss
+++ b/src/scss/elements/_media.scss
@@ -32,7 +32,7 @@ figcaption {
 	font-size: cssVar(font-size-sm);
 	font-weight: 700;
 	text-align: center;
-	width: max-content;
+	width: auto;
 	margin: cssVar(spacing-sm) auto 0;
 }
 
